platform-enterprise_versioned_docs/version-25.1/enterprise/upgrade.mdx
---
title: "Upgrade deployment"
description: "Platform Enterprise update guidance"
date: "21 Aug 2024"
tags: [enterprise, update, install]
---

Follow these steps to upgrade your database instance and Platform Enterprise installation:

:::caution
The database volume is persistent on the local machine by default if you use the `volumes` key in the `db` or `redis` section of your `docker-compose.yml` file to specify a local path to the DB or Redis instance. If your database is not persistent, you must back up your database before performing any application or database upgrades.
:::

1. Make a backup of the Seqera database. If you use the pipeline optimization service and your `groundswell` database resides in a database instance separate from your Seqera database, make a backup of your `groundswell` database as well.
1. Download the latest versions of your deployment templates and update your Seqera container versions:
    - [docker-compose.yml](./_templates/docker/docker-compose.yml) for Docker Compose deployments
    - [tower-cron.yml](./_templates/k8s/tower-cron.yml) and [tower-svc.yml](./_templates/k8s/tower-svc.yml) for Kubernetes deployments
1. Restart the application.
1. If you're using a containerized database as part of your implementation:
    1. Stop the application.
    1. Upgrade the MySQL image.
    1. Restart the application.
1. If you're using Amazon RDS or other managed database services:
    1. Stop the application.
    1. Upgrade your database instance.
    1. Restart the application.
1. If you're using the pipeline optimization service (`groundswell` database) in a database separate from your Seqera database, update the MySQL image for your `groundswell` database instance while the application is down (during step 4 or 5 above). If you're using the same database instance for both, the `groundswell` update will happen automatically during the Seqera database update.

### Custom deployments

- Run the `/migrate-db.sh` script provided in the `migrate-db` container. This will migrate the database schema.
- Deploy Seqera following your usual procedures.

### Nextflow launcher image

If you must host your nf-launcher container image on a private image registry, copy the [nf-launcher image](https://quay.io/seqeralabs/nf-launcher:j17-24.04.4) to your private registry. Then update your `tower.env` with the launch container environment variable:

    `TOWER_LAUNCH_CONTAINER=<FULL_PATH_TO_YOUR_PRIVATE_IMAGE>`

:::caution
If you're using AWS Batch, you will need to [configure a custom job definition](./advanced-topics/custom-launch-container.mdx) and populate the `TOWER_LAUNCH_CONTAINER` with the job definition name instead.
:::



## Upgrading to v25.1

Seqera Enterprise 25.1 is a major version release as such this requires downtime for reasons...

:::warning
Upgrading to version 25.1 requires backend downtime in order for the database migration to complete successfully. Do not start the upgrade while any pipelines are in a `running` state as active run data may be lost.
:::

### Prerequisites
- Redis version 6.2 or greater is required.
- Redis version 7 is officially supported.
- MySQL 5.7 or greater is required.
- MySQL 8.0 or greater is officially supported.

### Breaking changes

#### Seqera AWS ECR repository customer access ends June 1, 2025

Customers will no longer be able to pull Seqera Enterprise container images from the legacy Seqera AWS ECR repository after June 1, 2025. All Seqera Enterprise images must be retrieved via the `cr.seqera.io` container registry after this cutoff date.

**Action required:**

- The installation and configuration templates provided for both [Docker Compose](https://docs.seqera.io/platform-enterprise/25.1/enterprise/docker-compose) and [Kubernetes](https://docs.seqera.io/platform-enterprise/25.1/enterprise/kubernetes) installations already reference the `cr.seqera.io` container image URLs.
- If you have not yet transitioned to this registry, [contact Support](https://support.seqera.io) to request credentials and for any further assistance.
- See [Legacy Seqera container image registries](https://docs.seqera.io/platform/25.1/platform-enterprise/advanced-topics/seqera-container-images) for more information.

#### OIDC Secrets injection modifications

The `auth-oidc-secrets` Micronaut environment has been replaced with `oidc-token-import`.

**Action required:**

- If you use this configuration, you must change the `MICRONAUT_ENV` environment variable in the manifest during the migration process.
- If you activate the feature with the `TOWER_OIDC_TOKEN_IMPORT` environment variable, no changes are needed.

:::note
Set `TOWER_REDIS_*` values directly in the `tower.yml` or AWS Parameter Store entry (for example, `TOWER_REDIS_URL: redis://...`).
:::

#### MariaDB driver: New MySQL connection parameter required

MariaDB driver 3.x requires a special parameter in the connection URL to connect to a MySQL database.

**Action required:**

# TODO - Remove version numbers. 
- All deployments using a MySQL database (regardless of version: 5.6, 5.7, or 8) must update their connection string to:  
  `jdbc:mysql://<domain>:<port>/tower?permitMysqlScheme=true`


**Action required:**

  `jdbc:mysql://<domain>:<port>/tower?permitMysqlScheme=true&sessionVariables=sql_mode='STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION'`

#### Micronaut property key changes

The property that determines the expiration time of the JWT access token has changed as of Seqera Enterprise version 24.1.

**Action required:**

- If you have customized this value previously, update to the new format:

| Previous                                                         | New                                                          |
| ---------------------------------------------------------------- | ------------------------------------------------------------ |
| `micronaut.security.token.jwt.generator.access-token.expiration` | `micronaut.security.token.generator.access-token.expiration` |
